--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,14 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/static/
+#spring.thymeleaf.prefix=classpath:/
+#spring.thymeleaf.suffix=.html
+spring.thymeleaf.prefix=/
 spring.thymeleaf.suffix=.html
+
+#spring.mvc.static-path-pattern=/**
+#spring.resources.static-locations = classpath:/,classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tti?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
