--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,7 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
-#spring.thymeleaf.prefix=classpath:/
-#spring.thymeleaf.suffix=.html
-spring.thymeleaf.prefix=/
+spring.thymeleaf.prefix=classpath:/static/
 spring.thymeleaf.suffix=.html
 
 #spring.mvc.static-path-pattern=/**
