--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-		
+		<!-- page -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<!-- spring boot web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
